--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 </li>
             </ul>
         </nav>
+        <div id="text">
+            <p>Miskat: "Please click the login button."</p>
+        </div>
         <div class="container">
             <div id="box">
                 <span class="close-icon">
