Code has edited

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div id="text">
-            <p>Miskat: "Please click the login button."</p>
+            <p>Miskat: "Please click on the login button."</p>
         </div>
         <div class="container">
             <div id="box">
