Code has changed

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                             <span><i class="ri-mail-fill"></i></span>
                         </div>
                         <div class="password input-box">
-                            <input type="password" required>
+                            <input id="login-password-input" type="password" required>
                             <label for="password">Password</label>
-                            <span><i class="ri-lock-fill"></i></span>
+                            <span id="login-password-icon"><i class="ri-eye-off-fill"></i></span>
                         </div>
                         <div class="remember-forgot">
                             <div class="remember-me">
@@ -82,9 +82,9 @@
                             <span><i class="ri-mail-fill"></i></span>
                         </div>
                         <div class="password input-box">
-                            <input type="password" required>
+                            <input id="register-password-input" type="password" required>
                             <label for="password">Password</label>
-                            <span><i class="ri-lock-fill"></i></span>
+                            <span id="register-password-icon"><i class="ri-eye-off-fill"></i></span>
                         </div>
                         <div class="terms-condition">
                             <label for="terms-condition">
