Code has been edited

--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
                     <a href="#" class="nav-link btn" id="main-btn">login</a>
                 </li>
             </ul>
+            <div class="toggle-btn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
         <div id="text">
-            <p>Miskat: "Please click on the login button."</p>
+            <p>Miskat: "Please, check the menu bar & click on login."</p>
         </div>
         <div class="container">
             <div id="box">
